[package]
name = "navpipe"
version = "0.2.0"
edition = "2021"
authors = [ "Satya M <manaswi.m02@gmail.com>",]
description = "Unofficial Python SDK for fetching mutual fund NAV history from mfapi.in (Rust backend)"
license = "Apache-2.0"
readme = "docs/README_PyPI.md"
keywords = [ "mutual fund", "NAV", "mfapi", "finance", "polars", "asyncio",]
repository = "https://github.com/MSM2002/navpipe"

[lib]
name = "navpipe"
crate-type = [ "cdylib",]

[dependencies]
serde_json = "1"
futures = "0.3"
anyhow = "1"
once_cell = "1.19"

[features]
python = [ "pyo3/extension-module",]

[dependencies.tokio]
version = "1"
features = [ "full",]

[dependencies.reqwest]
version = "0.11"
features = [ "json", "rustls-tls",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.polars]
version = "0.45"
features = [ "lazy", "temporal", "diagonal_concat",]

[dependencies.pyo3]
version = "0.22"
features = [ "extension-module",]

[dependencies.pyo3-polars]
version = "0.19"
features = [ "derive", "lazy",]

[package.metadata.maturin]
name = "navpipe"
bindings = "pyo3"
