[package]
name = "navpipe"
version = "0.2.0"
edition = "2021"
authors = ["Satya M <manaswi.m02@gmail.com>"]
description = "Unofficial Python SDK for fetching mutual fund NAV history from mfapi.in (Rust backend)"
license = "Apache-2.0"
readme = "docs/README_PyPI.md"
keywords = ["mutual fund", "NAV", "mfapi", "finance", "polars", "asyncio"]
repository = "https://github.com/MSM2002/navpipe"

[lib]
name = "navpipe"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
futures = "0.3"
anyhow = "1"
once_cell = "1.19"
# Core dependencies updated for hygiene and cross-platform safety
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.45", features = ["lazy", "temporal", "diagonal_concat"] }
pyo3-polars = { version = "0.19", features = ["derive", "lazy"] }

# REQWEST: Pure Rust TLS to avoid OpenSSL cross-compilation errors
[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

# PYO3: Kept at 0.22 as requested, but features are now managed via [features]
[dependencies.pyo3]
version = "0.22"

[features]
# 'default' is what runs when you do 'cargo build' or 'pip install -e .'
default = ["python"]
# 'python' is for standard local development
python = ["pyo3/extension-module"]
# 'abi3' is the special toggle for the Python 3.14+ safety net
abi3 = ["pyo3/abi3-py38"]

[package.metadata.maturin]
name = "navpipe"
bindings = "pyo3"
