[package]
name = "navpipe"
version = "0.3.0"
edition = "2021"
authors = [ "Satya M <manaswi.m02@gmail.com>",]
description = "Unofficial Python SDK for fetching mutual fund NAV history from mfapi.in (Rust backend)"
license = "Apache-2.0"
readme = "docs/README_PyPI.md"
keywords = [ "mutual fund", "NAV", "mfapi", "finance", "polars", "asyncio",]
repository = "https://github.com/MSM2002/navpipe"

[lib]
name = "navpipe"
crate-type = [ "cdylib",]

[dependencies]
serde_json = "1"
futures = "0.3"
anyhow = "1"
once_cell = "1.19"

[features]
default = [ "python",]
python = [ "pyo3/extension-module",]
abi3 = [ "pyo3/abi3-py313",]

[dependencies.tokio]
version = "1"
features = [ "full",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.polars]
version = "0.53"
features = [ "lazy", "temporal", "diagonal_concat", "object",]

[dependencies.pyo3-polars]
version = "0.26"
features = [ "derive", "lazy",]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [ "json", "rustls-tls",]

[dependencies.pyo3]
version = "0.27"

[package.metadata.maturin]
name = "navpipe"
bindings = "pyo3"
