[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "navpipe"
version = "0.1.1"
description = "Unofficial Python SDK for fetching mutual fund NAV history from mfapi.in"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Satya M", email = "manaswi.m02@gmail.com"}
]
keywords = ["mutual fund", "NAV", "mfapi", "finance", "polars", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "polars>=0.18.0",
    "aiohttp>=3.8.0",
    "msgspec>=0.16.0",
    "aiolimiter>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/MSM2002/navpipe"
Repository = "https://github.com/MSM2002/navpipe"
BugTracker = "https://github.com/MSM2002/navpipe/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["navpipe*"]