[build-system]
requires = [ "maturin>=1.2",]
build-backend = "maturin"

[project]
name = "navpipe"
version = "0.3.0"
description = "Unofficial Python SDK for fetching mutual fund NAV history from mfapi.in (Rust backend)"
readme = "docs/README_PyPI.md"
requires-python = ">=3.8"
keywords = [ "mutual fund", "NAV", "mfapi", "finance", "polars", "asyncio", "rust",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Python :: Implementation :: CPython", "Topic :: Software Development :: Libraries", "Topic :: Office/Business :: Financial",]
dependencies = [ "polars>=0.18.0",]
[[project.authors]]
name = "Satya M"
email = "manaswi.m02@gmail.com"

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/MSM2002/navpipe"
Repository = "https://github.com/MSM2002/navpipe"
BugTracker = "https://github.com/MSM2002/navpipe/issues"

[tool.maturin]
bindings = "pyo3"
